--- a/src_frontend/styles/login/navbar.css
+++ b/src_frontend/styles/login/navbar.css
@@ -24,16 +24,14 @@
     width:100%;
     z-index:100;
     
-    /* box-sizing: border-box; */
 }
+
 
 .header__spacer__left {
     width: 10%;
     float: left;
-    display: flex;
 
 }
-
 
 .header__logo {
     width: 20%;
@@ -51,21 +49,31 @@
 }
 
 .header__navbar {
-    width: 30%;
+    width: 25%;
     float: right;
 
     height: 50px;
 }
 
 .header__spacer__right {
-    width: 20%;
-    float: left;
-    display: flex;
+    width: 10%;
+    float: right;
+    /* display: flex; */
 
 }
 
 
 .header__logo__img {
+    width: 80%;
+    float: right;
+
+    display: flex;
+    justify-content: center;
+
+    top: 50%;
+    left: 50%;
+
+    height: 50px;
 
     max-height: 100%;
     max-width: 100%;
@@ -87,6 +95,62 @@
     height: 50px;
 }
 
+
+.split__left_20 {
+    width: 20%;
+    float: left;
+
+    display: flex;
+    justify-content: center;
+    top: 50%;
+    left: 50%;
+
+    height: 50px;
+
+}
+
+.split__right_80 {
+    width: 80%;
+    float: right;
+
+    display: flex;
+    justify-content: center;
+
+    top: 50%;
+    left: 50%;
+
+    height: 50px;
+
+}
+
+.split__left_80 {
+    width: 80%;
+    float: left;
+
+    display: flex;
+    justify-content: center;
+    top: 50%;
+    left: 50%;
+
+    height: 50px;
+
+}
+
+.split__right_20 {
+    width: 20%;
+    float: right;
+
+    display: flex;
+    justify-content: center;
+
+    top: 50%;
+    left: 50%;
+
+    height: 50px;
+
+}
+
+
 .split__two__left {
     width: 50%;
     float: left;
@@ -96,7 +160,7 @@
     top: 50%;
     left: 50%;
 
-    height: 50px;
+    height: 47px;
 }
 
 .split__two__right {
@@ -109,7 +173,7 @@
     top: 50%;
     left: 50%;
 
-    height: 50px;
+    height: 47px;
 
 }
 
