--- a/src_frontend/styles/signup_form/index.css
+++ b/src_frontend/styles/signup_form/index.css
@@ -14,6 +14,7 @@
 
     border-radius: 25px;
     border: 2px solid #609;
+    /* border: 2px solid yellow; */
     padding: 20px; 
     width: 300px;
     height: 15px;  
