--- a/src_frontend/views/signup_form.html
+++ b/src_frontend/views/signup_form.html
@@ -25,6 +25,8 @@
 
     <div class="center__err center" >
         Korisničko ime se već koristi.
+        Korisničko ime ne može biti prazno.
+
         <br>
         OIB nije valjanog formata, mora sadržavati 11 brojeva.
         <br>
@@ -60,7 +62,7 @@
                             <span id="delete__username">x</span>
                         </span>
                         <div id="input__username__err">
-                            Korisničko ime se već koristi.
+                            Korisničko ime ne može biti prazno.
                         </div>                       
                     
                     </td>
@@ -72,7 +74,7 @@
                             <span id="delete__OIB">x</span>
                         </span>
                         <div id="input__OIB__err">
-                            OIB nije valjanog formata, mora sadržavati 11 brojeva.
+                            <!-- OIB nije valjanog formata, mora sadržavati 11 brojeva. -->
                         </div>
                     </td>
                 </tr>
@@ -178,7 +180,6 @@
                         <span class="deleteicon">
                             <input type="password" class="input__text" id="input__password" 
                             placeholder="Lozinka" required 
-                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
                             
                             />
                             <span id="delete__password">x</span>
@@ -186,13 +187,7 @@
 
                                                 
                         <div id="input__password__err">
-                            <!-- Lozinka nije dovoljno sigurna -->
-                            <!-- , mora biti duljine minimalno 8 znakova,
-                             sadržavati barem jedno veliko slovo, 
-                             barem jedno malo slovo, barem jedan broj i 
-                             barem jedan nealfanumerički znak.     -->
                         </div>
-
                                       
                     </td>
                 </tr>
@@ -217,7 +212,8 @@
 
 
 
-
+<!-- pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
+                             -->
 
 
 </body>
