:white_check_mark: test done for validation

--- a/src_frontend/views/signup_form.html
+++ b/src_frontend/views/signup_form.html
@@ -121,7 +121,7 @@
                             <span id="delete__cardnumber">x</span>
                         </span>
                         <div id="input__cardnumber__err">
-                            Broj kreditne kartice nije valjanog formata. 375987654321001
+                            Broj kreditne kartice nije valjanog formata.
                         </div>
                     </td>
                 </tr>
@@ -134,7 +134,7 @@
                             <span id="delete__cardtype">x</span>
                         </span>
                         <div id="input__cardtype__err">
-                            Tip kreditne kartice ne postoji.
+                            <!-- Tip kreditne kartice ne postoji. -->
                         </div>
                     
                     </td>
