--- a/src_frontend/styles/login/login_center.css
+++ b/src_frontend/styles/login/login_center.css
@@ -23,7 +23,7 @@
 
 .center {
     width: 60%;
-    border: 3px solid green;
+    /* border: 3px solid green; */
     padding: 10px;
     height: 90%;
     margin: auto;
@@ -32,7 +32,7 @@
 } 
 
     .center__title {
-        border: 3px solid green;
+        /* border: 3px solid green; */
         padding: 10px;
         min-width: calc(159px + 265px);
         text-align: center;
