--- a/src_frontend/styles/navigation_bar/index.css
+++ b/src_frontend/styles/navigation_bar/index.css
@@ -66,7 +66,7 @@ body {
   table {
     /* border-collapse: collapse; */
     width: 100%;
-    border: 1px solid #ddd;
+    /* border: 1px solid #ddd; */
   }
   
   th, td {
