Dodan period i ispravljen person post i getcommandquery

--- a/src_backend/PetCareAppMVC/Features/People/Edit.cshtml
+++ b/src_backend/PetCareAppMVC/Features/People/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model PetCareAppMVC.Features.PersonViewModel
+﻿@model PetCareAppMVC.Features.People.PersonViewModel
 @{
   ViewBag.Title = $"{Model.userName} {Model.email}";
 }
