--- a/src_backend/PetCareAppMVC/Features/Shared/Navigation.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Shared/Navigation.cshtml
@@ -10,6 +10,7 @@
         <li class="nav-item"><a asp-action="Index" asp-controller="Pettype">Pettype</a></li>
          <li class="nav-item"><a asp-action="Index" asp-controller="Pet">Pet</a></li>
          <li class="nav-item"><a asp-action="Index" asp-controller="Location">Location</a></li>
+          <li class="nav-item"><a asp-action="Index" asp-controller="Period">Period</a></li>
       </ul>    
     </div>
   </nav>
