--- a/src_backend/PetCareAppMVC/Features/People/Create.cshtml
+++ b/src_backend/PetCareAppMVC/Features/People/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PetCareAppMVC.Features.PersonViewModel
+﻿@model PetCareAppMVC.Features.People.PersonViewModel
 @{
   ViewBag.Title = "Add new person";
 }
