--- a/src_frontend/styles/index.css
+++ b/src_frontend/styles/index.css
@@ -1,45 +1,169 @@
-
-
-
-#index_img_cont {
+*{
+    box-sizing:border-box
 }
-#index_img_cont img {
-
-    object-fit: contain
-
-    width: 100%;
+.intro{
+    background:#000;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    display:flex;
+    justify-content:center;
+    align-items:center
 }
-
-
-.container img{
-    width: 100%;
-    height: auto;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
- }​
-
-
- .tiledBackground {
-    background-image: url(https://www.mozilla.org/media/img/logos/firefox/logo-quantum.9c5e96634f92.png);
-    background-size: 150px;
-    width: 300px;
-    height: 300px;
-    border: 2px solid;
-    color: pink;
-  }
-  
-
-  .img-container {
-    border: 2px solid red;
-    justify-content: center;
-    display: flex;
-    flex-direction: row;
-    overflow: hidden;
-    
-  }
-  .img-container .img-to-fit {
-    flex: 1;
-    height: 100%;
-  }
-
+.center{
+    width:60%;
+    padding:10px;
+    height:90%;
+    margin:auto;
+    margin-top:25px;
+    min-width:1000px
+}
+.center__title{
+    padding:10px;
+    min-width:calc(159px + 265px);
+    text-align:center
+}
+.center__container{
+    min-width:400px
+}
+.center__login{
+    border:3px solid green;
+    flex:1;
+    width:40%;
+    min-width:274px
+}
+.header{
+    background-color:#add8e6;
+    position:fixed;
+    top:0;
+    width:100%;
+    z-index:100
+}
+.header__logo{
+    width:20%;
+    float:left;
+    display:flex;
+    height:50px
+}
+.header__empty{
+    width:50%;
+    float:left;
+    height:50px
+}
+.header__navbar{
+    width:25%;
+    float:right;
+    height:50px
+}
+.header__logo__img{
+    width:80%;
+    float:right;
+    display:flex;
+    justify-content:center;
+    top:50%;
+    left:50%;
+    height:50px;
+    max-height:100%;
+    max-width:100%
+}
+.split__left_20{
+    width:20%;
+    float:left;
+    display:flex;
+    justify-content:center;
+    top:50%;
+    left:50%;
+    height:50px
+}
+.split__right_80{
+    width:80%;
+    float:right;
+    display:flex;
+    justify-content:center;
+    top:50%;
+    left:50%;
+    height:50px
+}
+.split__left_80{
+    width:80%;
+    float:left;
+    display:flex;
+    justify-content:center;
+    top:50%;
+    left:50%;
+    height:50px
+}
+.split__right_20{
+    width:20%;
+    float:right;
+    display:flex;
+    justify-content:center;
+    top:50%;
+    left:50%;
+    height:50px
+}
+body{
+    font-family:Arial,Helvetica,sans-serif
+}
+.navbar{
+    overflow:hidden;
+    background-color:#add8e6
+}
+.navbar a{
+    float:left;
+    font-size:16px;
+    color:#000;
+    text-align:center;
+    padding:14px 16px;
+    text-decoration:none
+}
+.dropdown{
+    float:left;
+    overflow:hidden
+}
+.dropdown .dropbtn{
+    font-size:16px;
+    border:none;
+    outline:0;
+    color:#000;
+    padding:14px 16px;
+    background-color:inherit;
+    font-family:inherit;
+    margin:0
+}
+.dropdown:hover .dropbtn,.navbar a:hover{
+    background-color:#2596be
+}
+.dropdown-content{
+    display:none;
+    position:absolute;
+    background-color:#f9f9f9;
+    min-width:160px;
+    box-shadow:0 8px 16px 0 rgba(0,0,0,.2);
+    z-index:1
+}
+.dropdown-content a{
+    float:none;
+    color:#000;
+    padding:12px 16px;
+    text-decoration:none;
+    display:block;
+    text-align:left
+}
+.dropdown-content a:hover{
+    background-color:#ddd
+}
+.dropdown:hover .dropdown-content{
+    display:block
+}
+body,html{
+    margin:0;
+    height:100%;
+    overflow:hidden
+}
+.image{
+    max-width:100%;
+    max-height:100%
+}
