--- a/src_frontend/styles/login/navbar.css
+++ b/src_frontend/styles/login/navbar.css
@@ -1,3 +1,125 @@
+* {
+    box-sizing: border-box;
+
+}
+
+.intro {
+    background: black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hide span {
+    transform: translateY(100%);
+    display: inline-block;
+}
+
+
+.center {
+    width: 60%;
+    /* border: 3px solid green; */
+    padding: 10px;
+    height: 90%;
+    margin: auto;
+    margin-top: 25px;
+    min-width: 1000px;
+} 
+
+    .center__title {
+        /* border: 3px solid green; */
+        padding: 10px;
+        min-width: calc(159px + 265px);
+        text-align: center;
+
+    }
+
+    .center__container {
+        /* display: flex; */
+        min-width: 400px;
+    }
+
+        .center__maps {
+            border: 3px solid green;
+            flex: 0 0 60%;
+            min-width: 159px;
+            text-align: center;
+
+        }
+
+            #map {
+                height: 400px;
+                width: 100%;
+            }
+
+
+        .center__login {
+            border: 3px solid green;
+            flex: 1;
+            width: 40%;
+            min-width: 274px;
+        }
+
+            .center__login__newC,
+            .center__login__newU,
+            .center__login__existingU {
+                min-width: 265px;
+            }
+
+
+                .center__login__table {
+                        width: auto;
+                        width: 80%;
+                        min-width: 280px;
+                    }
+
+
+        .center__menu__button {
+            background-color: green; 
+            border: none;
+            color: white;
+            padding: 16px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            padding: 8px 8px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+            border-radius: 8px;
+            margin: auto;
+            width: 100%;
+            
+            min-width: 265px;
+            border: 1px solid white;
+        } 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .theme__color {
     color: black;
 }
