--- a/src_backend/PetCareAppMVC/Features/Signup/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Signup/Index.cshtml
@@ -16,8 +16,12 @@
                             <div class="header__logo">
                                 <div class="split__left_20"></div>
                                 <div class="split__right_80">
-                                    <img class="header__logo__img" src="~/resources/logo_horizontal.png" alt="">
-                                </div>
+                                    <a href="/home" style="padding: unset">
+
+                                        <img style="width: 100%" class="header__logo__img" src="../resources/logo_horizontal.png" alt="">
+                                
+                                    </a>
+                            </div>
                             </div>
                             <div class="header__empty">
                             </div>
