:construction: cors checkpoint

--- a/src_backend/PetCareAppMVC/Features/Listings/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Listings/Index.cshtml
@@ -1,4 +1,4 @@
-@model PetCareAppMVC.Features.Login.ListingsViewModel
+@model PetCareAppMVC.Features.Login.LoginViewModel
 
 @{
     ViewData["Title"] = "oglasi";
@@ -6,7 +6,10 @@
 
 <div>
 listings page
-</div>
+<br></br>
 
+    @Model.sessionId<br>
+
+</div>
 
 
