--- a/src_frontend/views/listings.html
+++ b/src_frontend/views/listings.html
@@ -43,84 +43,76 @@
                         </style>
                         <body>
                         
-                        <h2>A basic HTML table</h2>
-                        
-                        <table style="width:100%;">
-                          <tr>
-                            <td style="width: 30%;">
-                                Listings
-                                <table class="center__login__table">
-                                    <tr>
-                                        <td>
-                                            <table>
-                                                <tr>
-                                                    <td>
-                                                        description
-                                                    </td>
-                                        
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                      cijena  
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        zivotinje
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        lokacija
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        period od
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        period do
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        stan ili kuca
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        kat
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        recenzije do sad, prosjek ocjena + opis
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        zivotinja kartica
-                                                    </td>
-                                                </tr>
+                     
+                        <table class="center__login__table" style="width: 100%;">
+                            <tr>
+                                <td>
+                                    <table>
+                                        <tr>
+                                            <td>
+                                                opis:
+                                            </td>
+                                
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                cijena:   
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                zivotinje:
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                lokacija:
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                period od:
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                period do:
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                stan ili kuca
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                kat
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                recenzije do sad, prosjek ocjena + opis
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                zivotinja kartica
+                                            </td>
+                                        </tr>
 
-                                            </table>
+                                    </table>
 
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td><input class="center__menu__button button" value="Prijavi me" type="submit" id="4"></td>
-                                    </tr>
-                                </table>
-                            </td style="width=70%">
-                            <td>Map</td>
-                          </tr>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><input class="center__menu__button button" value="Prijavi me" type="submit" id="4"></td>
+                            </tr>
                         </table>
+                     
                 </div>
             </div>
         </div>
