--- a/src_frontend/views/map.html
+++ b/src_frontend/views/map.html
@@ -6,21 +6,25 @@
     <title>Parkiraj Me</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../public/styles/home/home_center.css">
-    <link rel="stylesheet" href="../public/styles/home/home_footer.css">
-    <link rel="stylesheet" href="../public/styles/global/switch.css">
+    <link rel="stylesheet" href="../styles/home/home_center.css">
+    <link rel="stylesheet" href="../styles/home/home_footer.css">
+    <link rel="stylesheet" href="../styles/global/switch.css">
 </head>
 <body>
     <div class="center__maps">
         <h3>Prona&scaron;li smo mjesto za tebe!</h3><!-- The div element for the map-->
         <div id="map"></div>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzm5OOeVsAHmmVfHqPtlgz6XjicHRqWlE&amp;callback=initMap&amp;libraries=&amp;v=weekly" defer=""></script>
-        <script src="../public/scripts/global/display_locations.js"></script>
+
+        <!-- <script src="../scripts/map.js"></script> -->
+        <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzm5OOeVsAHmmVfHqPtlgz6XjicHRqWlE&amp;callback=initMap&amp;libraries=&amp;v=weekly" defer=""></script> -->
+        <script src="../scripts/global/display_locations.js"></script>
+        <src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3dOlxW7phgwp0rYg5K213BNnYlqtiscg&callback=initMap&v=weekly"></src>
+
     </div>
 
 </body>
 
-<script src="../public/scripts/home/drop_down_activators.js"></script>
-<script src="../public/scripts/home/on_load_functions.js"></script>
-<script src="../public/scripts/global/tab_name_changer.js"></script>
+<!-- <script src="../scripts/home/drop_down_activators.js"></script> -->
+<!-- <script src="../scripts/home/on_load_functions.js"></script> -->
+<!-- <script src="../scripts/global/tab_name_changer.js"></script> -->
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
