--- a/src_backend/PetCareAppMVC/Features/Adlisting/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Adlisting/Index.cshtml
@@ -1,32 +1,24 @@
-﻿
-@model IList<Domain.Adlisting>
-@{
-  ViewBag.Title = "Adlisting";
+﻿    <div id="map"></div>
+
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3dOlxW7phgwp0rYg5K213BNnYlqtiscg&callback=initMap&v=weekly&language=hr&region=HR"
+    ></script>
+
+    <script>
+
+window.onload = () =>  {
+  console.log("on load");
+    initMap();
 }
 
-<div class="table-responsive">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Person</th>
+function initMap() {
+  const map = new google.maps.Map(document.getElementById("map"), {
+    zoom: 7,
+    center: { lat: 44.717, lng: 16.1 },
+  });
+}
 
-        <th>Opis</th>
-        <th>Cijena</th>
-      </tr>
-    </thead>
-    <tbody>
-      @foreach (var item in Model)
-      {
-        <tr>
-          <td>@item.UserName</td>
-          <td>@item.Description</td>
-          <td>@item.Price</td>
-          <td>@item.IdLocation</td>
-        </tr>
-      }
-      </tbody>
-  </table>
-</div>
-<p>
-  <a asp-action="Create" class="btn btn-sm btn-primary">Add new adlisting</a>
-</p>
+
+
+    </script>
