--- a/src_frontend/views/listings.html
+++ b/src_frontend/views/listings.html
@@ -110,7 +110,42 @@
                                             </td>
                 
                                             <td style="width: 50%;">
-                desno
+                <!-- desno -->
+         
+                <style type="text/css">
+                  /* html, body,  */
+                  #basicMap {
+                      width: 500px;
+                      height: 500px;
+                      /* margin: 0; */
+
+                      /* width: 100%; 
+                      height: 100%;  */
+                      /* position:fixed; */
+                    /* margin-top: -20%; */
+                    }
+                </style>
+
+                <script src="../resources/OpenLayers-2.13.1/OpenLayers.js"></script>
+
+                <script>
+                window.onload = () => {
+                    map = new OpenLayers.Map("basicMap");
+                    var mapnik         = new OpenLayers.Layer.OSM();
+                    var fromProjection = new OpenLayers.Projection("EPSG:4326");   // Transform from WGS 1984
+                    var toProjection   = new OpenLayers.Projection("EPSG:900913"); // to Spherical Mercator Projection
+                    var position       = new OpenLayers.LonLat(13.41,52.52).transform( fromProjection, toProjection);
+                    var zoom           = 15; 
+            
+                    map.addLayer(mapnik);
+                    map.setCenter(position, zoom );
+                }
+
+                </script>
+                <div id="basicMap" style="width: 100%;"></div>
+
+            
+
                                             </td>
                                         </tr>
                 
